# k8s-lambda-shim

./: CLI-README.md  Dockerfile  PACKAGE-SUMMARY.md  QUICK-REFERENCE.md  README-original.md  README.md  anti_slop.py  pyproject.toml  pytest.ini  slop_report.json
docs/: api-reference.md  architecture.md  asn-processing.md
examples/: asn_processor.py  config.yaml  test-sqs-event.json
src/k8s_lambda_shim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/shim/: cli.py  handlers.py  server.py
src/shim/events/: dispatcher.py
src/shim/middleware/: asn.py  base.py  common.py
src/shim/registry/: service_registry.py
tests/: conftest.py  test_asn_middleware.py  test_dispatcher.py  test_middleware.py  test_registry.py
